# amp-rbc-md

./: .coverage  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE  README.md  TROUBLESHOOTING.md  download-minimal-dbs.sh  environment-lightweight.yml  environment-linux.yml  environment.yml  fix-cuda-issues.sh  fix-dependencies.sh  fix-importlib-metadata.sh  fix-pytorch-cuda.sh  fix-tensorflow-linux.sh  install-fastfold-simple.sh  install-jax-cuda-correct.sh  install-jax-cuda.sh  pyproject.toml  reset-environment.sh  setup-clean-environment.sh  setup-fixed.sh  setup-gcp-gpu.sh  setup-lightweight.sh  setup-minimal.sh  setup-no-gmxapi.sh  setup-simple.sh  setup-ultra-fast.sh  setup-with-gmxapi.sh  setup.sh  test-installation.sh  verify-installation.py
.github/workflows/: ci.yml  docker-publish.yml  gpu_smoke.yml  pypi.yml
config/: judge.yaml  md.yaml  system.yaml
docs/: CLEAN_INSTALL.md  FIX_DEPENDENCIES.md  GOOGLE_CLOUD_GPU.md  INSTALLATION.md  INSTALLATION_STEP_BY_STEP.md  MANUAL_JAX_CUDA_INSTALL.md  OPTIMIZATION.md  TUTORIAL.md
envs/: folding.yml  md.yml
examples/: batch.fasta
mdp_templates/: npt.mdp  nvt.mdp  prod.mdp  pull.mdp
results/286b590a06/01_pdb/: sequence.fasta
results/286b590a06/rep0/: report.csv
results/8963f35cd5/01_pdb/: sequence.fasta
results/8963f35cd5/02_cg/: system.top
results/8963f35cd5/mdp/: prod.mdp
results/8963f35cd5/rep0/: report.csv
results/8a024c1b0b/01_pdb/: sequence.fasta
results/8a024c1b0b/mdp/: minim.mdp
results/8a024c1b0b/rep0/: report.csv  wham_free_energy.xvg
scripts/: download_pdb_mmcif.sh  fastfold_inference.py  fold.sh  install_fastfold.sh  simulate.sh
src/amp_rbc_md/: __init__.py  analyse.py  build_membrane.py  cli.py  fasta_to_pdb.py  fastfold_wrap.py  gen_mdp.py  gmx_runner.py  judge.py  martinize_wrap.py  pore.py  render.py  umbrella.py  utils.py  wham.py
src/cli/: run_sim.py
tests/: test_analyse.py  test_build_and_martinize.py  test_cli.py  test_gen_mdp.py  test_gpu_detect.py  test_judge.py  test_pore.py  test_render.py  test_runner_dummy.py  test_umbrella.py  test_utils.py  test_wham.py
workflow/: Snakefile
workflow/profile/slurm/: config.yaml
