[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amp-rbc-md"
version = "0.2.0"
description = "Batch-fähige Martini-3-RBC Simulation"
requires-python = "~=3.10"
authors = [{name = "amp-rbc-md Dev Team"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["gromacs", "martini", "biophysics", "simulation", "snakemake"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
amp-rbc-md = "cli.run_sim:run_sim" 